@startuml
skinparam classAttributeIconSize 0
class Workout{
exerciseList : ArrayList<Exercise>
+ Workout(workoutName : String)
+ getExerciseList() : ArrayList<Exercise>
+ getExerciseSet() : HashSet<Exercise>
+ addExercise(exercise : Exercise) : void
+ toString(numTabs : int) : String
}
Workout --|> Activity
class Exercise{
+ Exercise(exerciseName : String)
+ toString() : String
+ editExerciseName(newExerciseName : String) : void
}
Exercise --|> Activity
class ExerciseLog{
- weight : int
- sets : int
- repetitions : int
+ ExerciseLog(activityName : String, weight : int, sets : int, repetitions : int)
+ getSets() : int
+ getRepetitions() : int
+ getWeight() : int
}
ExerciseLog --|> Activity
class Activity{
# activityName : String
+ Activity(activityName : String)
+ getActivityName() : String
+ hashCode() : int
+ equals(obj : Object) : boolean
}
class WorkoutLog{
# workoutName : String
exerciseLogs : HashSet<ExerciseLog>
+ WorkoutLog(workoutDate : String, workoutName : String)
+ addExerciseLog(exerciseLog : ExerciseLog) : void
+ getWorkoutName() : String
+ getWorkoutDate() : String
+ getExerciseLogs() : HashSet<ExerciseLog>
}
WorkoutLog --|> Activity
class Day{
# assignedWorkout : Workout
+ Day(activityName : String)
+ setAssignedWorkout(assignedWorkout : Workout) : void
+ getAssignedWorkout() : Workout
}
Day --|> Activity
Day--"# assignedWorkout" Workout
@enduml